project_GYRO_Feb_04_2019.sdk/.metadata/.plugins/org.eclipse.cdt.ui/axi4_gyro_test_0.build.log
20:51:10 **** Auto Build of configuration Debug for project axi4_gyro_test_0 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/xaxidma_example_sg_poll.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxidma_example_sg_poll.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../axi4_gyro_test_0_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xaxidma_example_sg_poll.d" -MT"src/xaxidma_example_sg_poll.o" -o "src/xaxidma_example_sg_poll.o" "../src/xaxidma_example_sg_poll.c"
../src/xaxidma_example_sg_poll.c:120:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^~~~~~~
../src/xaxidma_example_sg_poll.c: In function 'main':
../src/xaxidma_example_sg_poll.c:106:21: error: 'XPAR_AXIDMA_0_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_XSDPS_0_DEVICE_ID'?
 #define DMA_DEV_ID  XPAR_AXIDMA_0_DEVICE_ID
                     ^
../src/xaxidma_example_sg_poll.c:207:32: note: in expansion of macro 'DMA_DEV_ID'
  Config = XAxiDma_LookupConfig(DMA_DEV_ID);
                                ^~~~~~~~~~
../src/xaxidma_example_sg_poll.c:106:21: note: each undeclared identifier is reported only once for each function it appears in
 #define DMA_DEV_ID  XPAR_AXIDMA_0_DEVICE_ID
                     ^
../src/xaxidma_example_sg_poll.c:207:32: note: in expansion of macro 'DMA_DEV_ID'
  Config = XAxiDma_LookupConfig(DMA_DEV_ID);
                                ^~~~~~~~~~
make: *** [src/xaxidma_example_sg_poll.o] Error 1

20:51:11 Build Finished (took 338ms)

